--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 
 data_alias/
 data_derived/
+output/
 writing/
+
 
 
 ##### below here is the R.gitignore template from https://github.com/github/gitignore/blob/master/R.gitignore
