--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ data_derived/
 output/
 scripts/old/
 scripts/cluster/old/
-scripts/cluster/slurm/
-scripts/misc_ref/
+scripts/cluster/slurm_out/
+scripts/ref/
 scripts/verbose_backups/
 writing/
 
